fix(ClickableTag): increase border size for better visibility

--- a/src/components/ClickableTag.css
+++ b/src/components/ClickableTag.css
@@ -5,7 +5,7 @@
 
   display: inline-flex;
   padding: var(--size-1) var(--size-2);
-  border: var(--border-size-1) solid var(--tag-color);
+  border: var(--border-size-2) solid var(--tag-color);
   background-color: var(--color-bg-main);
   cursor: pointer;
   color: var(--color-fg-main);
